--- a/co.mmunity/src/main/resources/application.properties
+++ b/co.mmunity/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/community?useTimezone=true&serverTimezone=UTC
 spring.datasource.username=martin
 spring.datasource.password=martin
@@ -14,4 +14,4 @@ logging.level.net.secudev.fs=TRACE
 
 
 #changer le port du serveur :
-server.port=8181
+#server.port=8181
