--- a/co.mmunity/src/main/resources/application.properties
+++ b/co.mmunity/src/main/resources/application.properties
@@ -8,10 +8,27 @@ spring.jpa.properties.hibernate.use_sql_comments=false
 spring.jpa.properties.hibernate.format_sql=true 	
 spring.jpa.properties.hibernate.type=trace 
 
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+spring.jpa.properties.hibernate.dialecte=org.hibernate.dialect.MySQL5InnoDBDialect
+
 logging.file=log.txt
-logging.level.*=ERROR
+#logging.level.*=ERROR
+logging.level.org.spingframework.web=DEBUG
 logging.level.net.secudev.fs=TRACE
 
 
 #changer le port du serveur :
-#server.port=8181
+server.port=8181
+
+## MULTIPART (MultipartProperties)
+# Enable multipart uploads
+spring.servlet.multipart.enabled=true
+# Threshold after which files are written to disk.
+spring.servlet.multipart.file-size-threshold=2KB
+# Max file size.
+spring.servlet.multipart.max-file-size=2MB
+# Max Request Size
+spring.servlet.multipart.max-request-size=6MB
+
+## File Storage Properties
+file.upload-dir=./uploads
