--- a/co.mmunity/src/main/resources/application.properties
+++ b/co.mmunity/src/main/resources/application.properties
@@ -11,8 +11,8 @@ spring.jpa.properties.hibernate.type=trace
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.jpa.properties.hibernate.dialecte=org.hibernate.dialect.MySQL5InnoDBDialect
 
-logging.file=log.txt
-#logging.level.*=ERROR
+#logging.file=log.txt
+logging.level.*=ERROR
 logging.level.org.spingframework.web=DEBUG
 logging.level.net.secudev.fs=TRACE
 
